--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -914,8 +914,8 @@ body{
             height: 32px;
             img{
                 position: absolute;
-                width: 86px;
-                height: 32px;
+                width: 100px;
+                height: 100%;
             }
             p{
                 color: #b08400;
@@ -934,33 +934,33 @@ body{
             }
             .tap{
                 &:hover{
-                    color: #52a28e;
+                    color: #665cd7;
                 }
             }
             .active_sale{
                 color: #fff;
                 border-radius: 6px;
-                background-color: #52a28e !important;
+                background-color: #665cd7 !important;
             }
             .active_code{
                 color: #fff;
                 border-radius: 6px;
-                background-color: #52a28e !important;
+                background-color: #665cd7 !important;
             }
             .active_build{
                 color: #fff;
                 border-radius: 6px;
-                background-color: #52a28e !important;
+                background-color: #665cd7 !important;
             }
             .active_deploy{
                 color: #fff;
                 border-radius: 6px;
-                background-color: #52a28e !important;
+                background-color: #665cd7 !important;
             }
             .active_launch{
                 color: #fff;
                 border-radius: 6px;
-                background-color: #52a28e !important;
+                background-color: #665cd7 !important;
             }
         }
         .coming_soon_email{
@@ -971,11 +971,12 @@ body{
             // border-radius: 6px;
             input{
                 background-color: rgba(102, 92, 215, 0.02);
-                border: solid 1px rgba(102, 92, 215, 0.26);
+                border: 2px solid;
+                border-color: #e9ecef;
+                border-radius: 6px;
                 height: 48px;
-                border: none;
+                padding: 30px 16px;
                 width: 100%;
-                // width: calc(100% - 156px);
                 outline: none;
             }
             button{
@@ -2469,8 +2470,8 @@ body{
                     text-align: center;
                     display: flex;
                     img{
-                        width: 86px;
-                        height: 32px;
+                        width: 100px;
+                        height: 100%;
                     }
                 }
             }
@@ -3589,7 +3590,7 @@ body{
                 display: none;
             }
             p{
-                background-color: #52a28e;
+                background-color: rgba(102, 92, 215, 0.1);
                 padding: 4px 20px 1px 20px;
                 border-radius: 50px;
                 margin: auto;
