update on tap menu text and color change

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -2061,7 +2061,7 @@ body{
         padding: 0px !important;
     }
     .active_section_tap{
-        border-bottom: 3px solid #52a28e;
+        border-bottom: 3px solid #665cd7;
     }
 }
 
@@ -2096,10 +2096,10 @@ body{
             // border-bottom: 2px solid;
             .team_icon{
                 border: 3px solid #fff !important;
-                background-color: #52a28e !important;
+                background-color: #665cd7 !important;
             }
             p{
-                color: #52a28e !important;
+                color: #665cd7 !important;
                 font-weight: 800;
             }
         }
@@ -2175,7 +2175,7 @@ body{
             // border-bottom: 2px solid;
             .team_icon{
                 border: 3px solid #fff !important;
-                background-color: #52a28e !important;
+                background-color: #665cd7 !important;
             }
             p{
                 color: #000 !important;
