--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2242,7 +2242,7 @@ body {
 }
 
 .tap_fixed .active_section_tap {
-  border-bottom: 3px solid #52a28e;
+  border-bottom: 3px solid #665cd7;
 }
 
 .product_planing .list_of_team {
@@ -2279,11 +2279,11 @@ body {
 
 .product_planing .list_of_team .active_section_tap .team_icon {
   border: 3px solid #fff !important;
-  background-color: #52a28e !important;
+  background-color: #665cd7 !important;
 }
 
 .product_planing .list_of_team .active_section_tap p {
-  color: #52a28e !important;
+  color: #665cd7 !important;
   font-weight: 800;
 }
 
@@ -2371,7 +2371,7 @@ body {
 
 .sticky_tap .list_of_team .active_section_tap .team_icon {
   border: 3px solid #fff !important;
-  background-color: #52a28e !important;
+  background-color: #665cd7 !important;
 }
 
 .sticky_tap .list_of_team .active_section_tap p {
