--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2606,9 +2606,6 @@ body {
   .why_us .row .text_para {
     font-size: 1rem;
   }
-  .why_us .row .coming_soon_email {
-    padding: 0px 15px;
-  }
   .why_us .row .coming_soon_email input {
     width: 100%;
   }
@@ -2616,6 +2613,7 @@ body {
     display: none;
   }
   .why_us .row .coming_soon_email .mobile_btn {
+    width: 100% !important;
     display: block !important;
   }
   .our_secrets .text h1 {
@@ -3048,9 +3046,6 @@ body {
   .why_us .row .desktop_responce_img {
     display: none;
   }
-  .why_us .row .coming_soon_email {
-    padding: 0px 15px;
-  }
   .why_us .row .coming_soon_email input {
     width: 100%;
   }
@@ -3058,6 +3053,7 @@ body {
     display: none;
   }
   .why_us .row .coming_soon_email .mobile_btn {
+    width: 100% !important;
     display: block !important;
   }
   .our_secrets {
@@ -3410,6 +3406,25 @@ body {
   .coming_soon {
     padding-top: 55px;
     height: auto !important;
+  }
+  .coming_soon .flag_bg {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .coming_soon .flag {
+    text-align: center;
+    margin: auto;
+  }
+  .coming_soon .flag img {
+    display: none;
+  }
+  .coming_soon .flag p {
+    background-color: #FFD34F;
+    padding: 4px 20px 1px 20px;
+    border-radius: 50px;
+    padding-top: 4px !important;
+    margin: auto;
   }
   .email_error {
     top: 14px !important;
