--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -2497,7 +2497,7 @@ body{
                 font-size: 1rem;
             }
             .coming_soon_email{
-                padding: 0px 15px;
+                // padding: 0px 15px;
                 input{
                     width: 100%;
                 }
@@ -2505,6 +2505,7 @@ body{
                     display: none;
                 }
                 .mobile_btn{
+                    width: 100% !important;
                     display: block !important;
                 }
             }
@@ -3082,7 +3083,7 @@ body{
         }
 
         .coming_soon_email{
-            padding: 0px 15px;
+            // padding: 0px 15px;
             input{
                 width: 100%;
             }
@@ -3090,6 +3091,7 @@ body{
                 display: none;
             }
             .mobile_btn{
+                width: 100% !important;
                 display: block !important;
             }
         }
@@ -3513,11 +3515,29 @@ body{
 .coming_soon{
     padding-top: 55px;
     height: auto !important;
+    .flag_bg{
+        display: flex;
+    }
+    .flag{
+        text-align: center;
+        margin: auto;
+        img{
+            display: none;
+        }
+        p{
+            background-color: #FFD34F;
+            padding: 4px 20px 1px 20px;
+            border-radius: 50px;
+            padding-top: 4px !important;
+            margin: auto;
+        }
+    }
 }
 
 .email_error{
     top: 14px !important;
 }
+
 
 // Our approach
 
