--- a/styles/styles.css
+++ b/styles/styles.css
@@ -103,15 +103,15 @@ body {
 }
 
 .fontLatoBold {
-  font-family: "PT serif";
+  font-family: "fontLatoBold";
 }
 
 .fontLatoRegular {
-  font-family: "PT serif";
+  font-family: "fontLatoRegular";
 }
 
 .fontLatoBlack {
-  font-family: "PT serif";
+  font-family: "fontLatoBlack";
 }
 
 .fontNova {
@@ -1034,17 +1034,15 @@ body {
 
 .why_us .row .coming_soon_email {
   margin-top: 50px;
-  padding: 0px;
+  padding: 10px 16px;
+  border: 2px solid;
+  border-radius: 4px;
 }
 
 .why_us .row .coming_soon_email input {
-  background-color: rgba(102, 92, 215, 0.02);
-  border: 2px solid;
-  border-color: #e9ecef;
-  border-radius: 6px;
   height: 48px;
-  padding: 30px 16px;
-  width: 100%;
+  border: none;
+  width: calc(100% - 156px);
   outline: none;
 }
 
