--- a/styles/styles.css
+++ b/styles/styles.css
@@ -541,7 +541,7 @@ body {
   font-size: 10px;
   padding: 3px 4px;
   position: absolute;
-  right: 0px;
+  right: -10px;
   top: 4px;
   width: 35px;
   height: 17px;
@@ -2142,7 +2142,7 @@ body {
 }
 
 .coming_soon .row {
-  padding-top: 130px;
+  padding-top: 160px;
 }
 
 .our_approach_title {
@@ -2800,7 +2800,7 @@ body {
     height: auto !important;
   }
   .coming_soon .row {
-    padding-top: 130px;
+    padding-top: 160px;
   }
   .email_error {
     top: 14px !important;
@@ -2882,6 +2882,9 @@ body {
   }
   .why_us .project_planing .mobile_tap_section tapSection .active_code {
     border-radius: 50px;
+  }
+  .why_us .project_planing .mobile_tap_section tapSection .space_in_word {
+    width: 110px;
   }
   .why_us .project_planing .mobile_tap_section tapSection span {
     font-size: 13px;
@@ -3510,6 +3513,9 @@ body {
   }
   .why_us .project_planing .mobile_tap_section tapSection .active_code {
     border-radius: 50px;
+  }
+  .why_us .project_planing .mobile_tap_section tapSection .space_in_word {
+    width: 110px;
   }
   .why_us .project_planing .mobile_tap_section tapSection span {
     font-size: 13px;
