--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -523,7 +523,7 @@ body{
                 font-size: 10px;
                 padding: 3px 4px;
                 position: absolute;
-                right: 0px;
+                right: -10px;
                 top: 4px;
                 width: 35px;
                 height: 17px;
@@ -1993,7 +1993,7 @@ body{
 
 .coming_soon{
     .row{
-        padding-top: 130px;
+        padding-top: 160px;
     }
     display: flex;
     align-items: center;
@@ -2807,7 +2807,7 @@ body{
     // coming_soon page
     .coming_soon{
         .row{
-            padding-top: 130px;
+            padding-top: 160px;
         }
         padding-top: 55px;
         height: auto !important;
@@ -2899,6 +2899,9 @@ body{
                     padding: 0px 10px !important;
                     .active_code{
                         border-radius: 50px;
+                    }
+                    .space_in_word{
+                        width: 110px;
                     }
                     span{
                         font-size: 13px;
@@ -3645,6 +3648,9 @@ body{
                 padding: 0px 10px !important;
                 .active_code{
                     border-radius: 50px;
+                }
+                .space_in_word{
+                    width: 110px;
                 }
                 span{
                     font-size: 13px;
