final up to date new on nav

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -2949,6 +2949,19 @@ body{
   }
   .header_mobile{
       display: block !important;
+      tag{
+        font-size: 10px;
+        padding: 3px 4px;
+        position: absolute;
+        top: 0px;
+        width: 35px;
+        height: 17px;
+        border-radius: 3px;
+        background-color: #16cebc;
+        line-height: 1.1;
+        color: #fff;
+        margin-left: 30px;
+      }
   }
   .header{
       display: none;
