final build new

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -432,6 +432,20 @@ body {
   height: 60px;
 }
 
+.header_mobile tag {
+  font-size: 10px;
+  padding: 3px 4px;
+  position: absolute;
+  top: 0px;
+  width: 35px;
+  height: 17px;
+  border-radius: 3px;
+  background-color: #16cebc;
+  line-height: 1.1;
+  color: #fff;
+  margin-left: 30px;
+}
+
 .header_mobile .logo_mobile {
   display: -webkit-box;
   display: -ms-flexbox;
